# jcode

./: .gitignore  .handoff_agents.md  AGENTS.md  CLAUDE.md  Cargo.toml  OAUTH.md  PLAN_MCP_SKILLS.md  README.md  RELEASING.md  build.rs  cargo_check_output.txt  codebase_refactor_research.md  duplicate-deps.txt  github_automation_maintenance_research.md
.cargo/: config.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  build.yml  ci.yml  codeql.yml  coverage.yml  docs.yml  fuzz.yml  nightly-ci.yml  pr-check.yml  release.yml  remote-build.yml  windows-smoke.yml
.teams/active/: TEAM_001_build_optimization.md  TEAM_001_code-fix-loop.md
.windsurf/agents/: backend-specialist.md  code-archaeologist.md  database-architect.md  debugger.md  devops-engineer.md  documentation-writer.md  explorer-agent.md  frontend-specialist.md  game-developer.md  mobile-developer.md  penetration-tester.md  performance-optimizer.md  product-manager.md  product-owner.md  project-planner.md  qa-automation-engineer.md  security-auditor.md  seo-specialist.md  test-engineer.md
.windsurf/rules/: windsurfrules.md
.windsurf/scripts/: README.md  add-workflow-or-skill.ps1  benchmark_analyzer.py  build.ps1  clean.ps1  config_validator.py  coverage.ps1  coverage_parser.py  deps.ps1  test.ps1  test_runner.py
.windsurf/workflows/: brainstorm.md  code-fix-loop.md  create.md  debug.md  deploy.md  enhance.md  evolve.md  implement.md  plan.md  research.md  suggest.md  test.md
crates/jcode-agent-runtime/: Cargo.toml
crates/jcode-ambient-types/: Cargo.toml
crates/jcode-auth-types/: Cargo.toml
crates/jcode-azure-auth/: Cargo.toml
crates/jcode-background-types/: Cargo.toml
crates/jcode-base-types/: Cargo.toml
crates/jcode-batch-types/: Cargo.toml
crates/jcode-config-types/: Cargo.toml
crates/jcode-core/: Cargo.toml
crates/jcode-desktop/: Cargo.toml
crates/jcode-desktop/src/: main.rs  power_inhibit.rs  session_launch.rs
crates/jcode-embedding/: Cargo.toml
crates/jcode-gateway-types/: Cargo.toml
crates/jcode-memory-types/: Cargo.toml
crates/jcode-message-types/: Cargo.toml
crates/jcode-mobile-sim/: Cargo.toml
crates/jcode-notify-email/: Cargo.toml
crates/jcode-pdf/: Cargo.toml
crates/jcode-plan/: Cargo.toml
crates/jcode-protocol/: Cargo.toml
crates/jcode-provider-core/: Cargo.toml
crates/jcode-provider-openrouter/: Cargo.toml
crates/jcode-selfdev-types/: Cargo.toml
crates/jcode-session-types/: Cargo.toml
crates/jcode-side-panel-types/: Cargo.toml
crates/jcode-task-types/: Cargo.toml
crates/jcode-terminal-launch/: Cargo.toml
crates/jcode-tui-markdown/: Cargo.toml
crates/jcode-tui-mermaid/: Cargo.toml
crates/jcode-tui-render/: Cargo.toml
crates/jcode-usage-types/: Cargo.toml
crates/jcode-workflow-types/: Cargo.toml
docs/: CODE_QUALITY_TODO.md  CRATE_OWNERSHIP_BOUNDARIES.md  DESKTOP_APP_ARCHITECTURE.md  DESKTOP_SINGLE_SESSION_DESIGN.md  OPENAI_APPS_MCP_ASSISTANT_REVIEW.md  SWARM_ARCHITECTURE.md  WINDOWS.md
docs/audits/: 2026-05-01-conclave-harness-hardening-audit.md
scripts/: WINDOWS_SCRIPT_STATUS.md  agent_trace.ps1  auth_regression_matrix.ps1  auth_regression_matrix.sh  bench_compile.ps1  bench_memory_cli.py  bench_selfdev_checkpoints.ps1  build_linux_compat.sh  cargo_exec.ps1  check_startup_budget.ps1  check_warning_budget.ps1  debug_socket_test.ps1  dev_cargo.ps1  install.ps1  install.sh  install_dev.ps1  install_dev.sh  install_dev_windows.sh  install_release.ps1  install_release.sh  install_with_bench.ps1  onboarding_sandbox.ps1  profile_remote_resume_burst.py  profile_single_spawn.py  real_provider_smoke.ps1  refactor_phase1_verify.ps1  refactor_shadow.ps1  security_preflight.ps1  setup_wsl2.sh  test_auth_e2e.ps1  test_e2e.ps1  test_fast.ps1  update_packages.sh
src/: agent.rs  background.rs  browser.rs  build.rs  bus.rs  catchup.rs  config.rs  copilot_usage.rs  env.rs  gateway.rs  goal.rs  id.rs  lib.rs  memory_types.rs  message.rs  overnight.rs  perf.rs  plan.rs  platform.rs  platform_tests.rs  process_title.rs  prompt.rs  prompt_tests.rs  provider_catalog.rs  provider_catalog_tests.rs  psmux.rs  server.rs  session.rs  setup_hints.rs  sidecar.rs  stdin_detect.rs  stdin_detect_tests.rs  telemetry.rs  todo.rs  update.rs  usage.rs  util.rs  video_export.rs
src/agent/: turn_execution.rs  utils.rs
src/ambient/: directives.rs  paths.rs  persistence.rs  prompt.rs  scheduler.rs
src/auth/: claude.rs  claude_tests.rs  copilot.rs  copilot_auth_tests.rs  cursor.rs  cursor_tests.rs  doctor.rs  external.rs  google.rs  login_diagnostics.rs  mod.rs  oauth.rs  status_types.rs  tests.rs  validation.rs  windsurf.rs
src/cli/: args.rs  commands.rs  dispatch.rs  login.rs  provider_init.rs  provider_init_tests.rs  selfdev_tests.rs  startup.rs  tui_launch.rs
src/gateway/: registry.rs
src/mcp/: protocol.rs
src/message/: notifications.rs
src/prompt/: selfdev_mode.md  selfdev_mode.txt  system_prompt.md
src/protocol_tests/: comm_responses.rs
src/provider/: accessors.rs  account_failover.rs  anthropic.rs  claude.rs  common.rs  cursor.rs  dispatch.rs  failover.rs  fix_models.py  mod.rs  models.rs  models_catalog.rs  openai.rs  openai_stream_runtime.rs  opencode_go.rs  openrouter.rs  openrouter_provider_impl.rs  openrouter_tests.rs  protobuf.rs  selection.rs  startup.rs  tests.rs  windsurf.rs
src/server/: client_actions.rs  client_actions_tests.rs  client_comm_channels.rs  client_comm_context.rs  client_comm_tests.rs  client_lifecycle.rs  client_session.rs  client_session_tests.rs  comm_await.rs  comm_control.rs  comm_control_tests.rs  comm_session.rs  comm_session_tests.rs  debug_command_exec.rs  debug_help.rs  debug_jobs.rs  debug_tests.rs  headless.rs  lifecycle.rs  provider_control.rs  provider_control_tests.rs  reload_recovery.rs  reload_state.rs  reload_tests.rs  socket.rs  socket_tests.rs  state.rs  swarm.rs  swarm_persistence_tests.rs  (+1 more)
telemetry-worker/: README.md  package.json  schema.sql
tmp_search/: rust_files.txt
(+171 files in other folders)
