[package]
name = "jcode"
version = "0.11.4"
description = "Possibly the greatest coding agent ever built — blazing-fast TUI, multi-model, swarm coordination, 30+ tools"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/jcode-agent-runtime",
    "crates/jcode-ambient-types",
    "crates/jcode-auth-types",
    "crates/jcode-embedding",
    "crates/jcode-gateway-types",
    "crates/jcode-pdf",
    "crates/jcode-background-types",
    "crates/jcode-batch-types",
    "crates/jcode-config-types",
    "crates/jcode-core",
    "crates/jcode-memory-types",
    "crates/jcode-message-types",
    "crates/jcode-plan",
    "crates/jcode-protocol",
    "crates/jcode-selfdev-types",
    "crates/jcode-session-types",
    "crates/jcode-side-panel-types",
    "crates/jcode-azure-auth",
    "crates/jcode-notify-email",
    "crates/jcode-provider-metadata",
    "crates/jcode-provider-core",
    "crates/jcode-provider-openrouter",
    "crates/jcode-provider-gemini",
    "crates/jcode-tui-markdown",
    "crates/jcode-usage-types",
    "crates/jcode-tui-core",
    "crates/jcode-tui-mermaid",
    "crates/jcode-task-types",
    "crates/jcode-tui-render",
    "crates/jcode-task-types",
    "crates/jcode-terminal-launch",
    "crates/jcode-tui-workspace",
    "crates/jcode-mobile-core",
    "crates/jcode-mobile-sim",
    "crates/jcode-desktop",
]

[lib]
name = "jcode"
path = "src/lib.rs"

[[bin]]
name = "jcode"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/bin/test_api.rs"

[[bin]]
name = "jcode-harness"
path = "src/bin/harness.rs"

[dependencies]
# Memory allocator (reduces fragmentation for long-running server)
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "time", "process", "sync", "fs", "signal"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream", "form"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# File operations
glob = "0.3"
ignore = "0.4"           # gitignore-aware file walking
walkdir = "2"
similar = "3"            # diffing for edits

# Utilities
dirs = "6"               # home directory
anyhow = "1"
libc = "0.2"             # Unix system calls (flock)
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
uuid = { version = "1", features = ["v4", "v5"] }
prost = "0.13"          # Protocol buffers for windsurf provider

# Embeddings (local inference) - behind feature flag (163 crates, slow to compile)
jcode-embedding = { path = "crates/jcode-embedding", optional = true }
jcode-gateway-types = { path = "crates/jcode-gateway-types" }

# OAuth
base64 = "0.22"
sha2 = "0.11"
rand = "0.10"
hex = "0.4"
url = "2"
open = "5"               # Open URLs in browser
rusqlite = { version = "0.39", features = ["bundled"] }
proctitle = "0.1"        # Process title setting
urlencoding = "2"        # URL encoding/decoding
jcode-auth-types = { path = "crates/jcode-auth-types" }
jcode-azure-auth = { path = "crates/jcode-azure-auth" }
jcode-agent-runtime = { path = "crates/jcode-agent-runtime" }
jcode-ambient-types = { path = "crates/jcode-ambient-types" }
jcode-notify-email = { path = "crates/jcode-notify-email" }
jcode-provider-metadata = { path = "crates/jcode-provider-metadata" }
jcode-provider-core = { path = "crates/jcode-provider-core" }
jcode-provider-openrouter = { path = "crates/jcode-provider-openrouter" }
jcode-provider-gemini = { path = "crates/jcode-provider-gemini" }
jcode-tui-markdown = { path = "crates/jcode-tui-markdown" }
jcode-tui-core = { path = "crates/jcode-tui-core" }
jcode-tui-mermaid = { path = "crates/jcode-tui-mermaid" }
jcode-tui-render = { path = "crates/jcode-tui-render", optional = true }
jcode-terminal-launch = { path = "crates/jcode-terminal-launch" }
jcode-tui-workspace = { path = "crates/jcode-tui-workspace" }
jcode-usage-types = { path = "crates/jcode-usage-types" }

# Streaming
tokio-stream = "0.1"
bytes = "1"

# TUI
ratatui = { version = "0.30", default-features = false, features = ["crossterm", "all-widgets"], optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
arboard = { version = "3", optional = true }              # Clipboard support
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }  # Only PNG/JPEG (skip avif/rav1e, exr, gif, tiff, etc)
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"], optional = true }
resvg = { version = "0.47", optional = true }
usvg = { version = "0.47", optional = true }

# Markdown & syntax highlighting
pulldown-cmark = { version = "0.13", optional = true }
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer.git", tag = "v0.2.1", optional = true }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"], optional = true }
unicode-width = { version = "0.2", optional = true }   # Unicode character display width

# PDF parsing (behind feature flag)
jcode-pdf = { path = "crates/jcode-pdf", optional = true }
jcode-background-types = { path = "crates/jcode-background-types" }
jcode-batch-types = { path = "crates/jcode-batch-types" }
jcode-config-types = { path = "crates/jcode-config-types" }
jcode-core = { path = "crates/jcode-core" }
jcode-memory-types = { path = "crates/jcode-memory-types" }
jcode-message-types = { path = "crates/jcode-message-types" }
jcode-plan = { path = "crates/jcode-plan" }
jcode-protocol = { path = "crates/jcode-protocol" }
jcode-selfdev-types = { path = "crates/jcode-selfdev-types" }
jcode-session-types = { path = "crates/jcode-session-types" }
jcode-task-types = { path = "crates/jcode-task-types" }
jcode-side-panel-types = { path = "crates/jcode-side-panel-types" }

# Archive extraction (for auto-update)
flate2 = "1"
tar = "0.4"
tempfile = "3"
agentgrep = { git = "https://github.com/1jehuang/agentgrep.git", tag = "v0.1.2" }
qr2term = "0.3.3"

[features]
default = ["embeddings", "pdf", "tui"]
jemalloc = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
    "tikv-jemallocator/stats",
    "tikv-jemalloc-ctl/stats",
]
jemalloc-prof = [
    "jemalloc",
    "tikv-jemallocator/profiling",
    "tikv-jemalloc-ctl/profiling",
]
embeddings = ["dep:jcode-embedding"]
pdf = ["dep:jcode-pdf"]
psmux = []
tui = [
    "dep:ratatui",
    "dep:crossterm",
    "dep:arboard",
    "dep:image",
    "dep:ratatui-image",
    "dep:resvg",
    "dep:usvg",
    "dep:pulldown-cmark",
    "dep:mermaid-rs-renderer",
    "dep:syntect",
    "dep:unicode-width",
    "dep:jcode-tui-render",
]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.8"

[profile.release]
opt-level = 2
debug = 0
codegen-units = 16
incremental = true
split-debuginfo = "packed"

[profile.selfdev]
inherits = "release"
opt-level = 1
incremental = true

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.dev]
debug = 0
opt-level = 1
incremental = true
codegen-units = 256
split-debuginfo = "off"
panic = "abort"

[profile.dev.package."*"]
opt-level = 1
codegen-units = 256

[profile.dev.build-override]
opt-level = 3
codegen-units = 16

# Fast dev profile for even quicker iteration during development
# Use with: cargo build --profile fast-dev
[profile.fast-dev]
inherits = "dev"
opt-level = 0
codegen-units = 512
panic = "abort"

[profile.test]
debug = 0
incremental = true
codegen-units = 256
split-debuginfo = "off"

[dev-dependencies]
async-stream = "0.3"

[build-dependencies]
