[package]
name = "jcode-desktop"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
arboard = "3"
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.11"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
pollster = "0.4"
pulldown-cmark = "0.13"
serde_json = "1"
wgpu = "29"
winit = "0.30"
