[package]
name = "jcode-embedding"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_embedding"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
reqwest = { version = "0.13", features = ["blocking"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
tract-hir = "0.22"
tract-onnx = "0.22"
